--- a/source/sass/blocks/_variables.scss
+++ b/source/sass/blocks/_variables.scss
@@ -7,4 +7,7 @@ $phone-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1300px;
 
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
+
 $title-fontstack: "Oswald", "Arial", "Helvetica", sans-serif;
