--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -45,16 +45,33 @@
 
     background: url("../../img/bg-map-mobile@1x.png") repeat-x center bottom;
     background-color: #cccccc;
+    background-size: 320px 362px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../../img/bg-map-mobile@2x.png");
+    }
 
     @media (min-width: $tablet-width) {
       height: 396px;
       margin-bottom: 41px;
 
       background: url("../../img/bg-map-tablet@1x.png") repeat-x center bottom;
+      background-size: 767px 400px;
+    }
+
+    @media (min-resolution: $retina-dpi) and (min-width: $tablet-width),
+      (min-resolution: $retina-dppx) and (min-width: $tablet-width) {
+      background-image: url("../../img/bg-map-tablet@2x.png");
     }
 
     @media (min-width: $desktop-width) {
       background: url("../../img/bg-map-desktop@1x.png") repeat-x center bottom;
+      background-size: 1440px 400px;
+    }
+
+    @media (min-resolution: $retina-dpi) and (min-width: $desktop-width),
+      (min-resolution: $retina-dppx) and (min-width: $desktop-width) {
+      background-image: url("../../img/bg-map-desktop@2x.png");
     }
   }
 
