--- a/source/sass/blocks/_product.scss
+++ b/source/sass/blocks/_product.scss
@@ -20,8 +20,7 @@
     @media (min-width: $tablet-width) {
       position: absolute;
       bottom: 100%;
-
-      outline: 1px solid lime;
+      left: 0;
 
       transform: translateY(124px);
     }
