Основное задание: начинаем оптимизировать векторную и растровую графику

--- a/source/sass/blocks/_button.scss
+++ b/source/sass/blocks/_button.scss
@@ -1,22 +1,33 @@
 .button {
-  padding: 0;
-  background-color: $accent-color;
-  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-height: 40px;
+  padding: 0;
+
   color: #ffffff;
+  font-size: 16px;
   font-family: $title-fontstack;
+  line-height: 20px;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 16px;
-  line-height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  background-color: $accent-color;
+  border: none;
+
+  &:hover {
+    background-color: $accent-color-dark;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 
   &--big {
     @media (min-width: $tablet-width) {
       width: auto;
       padding: 20px 25px;
+
       font-size: 20px;
       line-height: 20px;
     }
