--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -11,7 +11,7 @@
 
   &__fieldset {
     margin: 0;
-    margin-bottom: 28px;
+    margin-bottom: 27px;
     padding: 0;
 
     border: none;
@@ -21,12 +21,12 @@
     }
 
     @media (min-width: $desktop-width) {
-      margin-bottom: 56px;
+      margin-bottom: 59px;
     }
   }
 
   &__fieldset--additions {
-    margin-bottom: 24px;
+    margin-bottom: 23px;
   }
 
   &__fieldset--inner {
@@ -70,10 +70,10 @@
 
   &__container-inner--bordered {
     margin-bottom: 0;
-    padding-top: 19px;
+    padding-top: 22px;
     padding-bottom: 8px;
 
-    border: 1px solid $gray-color;
+    border: 1px solid $gray-color-dark;
 
     @media (min-width: $tablet-width) {
       margin-bottom: 10px;
@@ -160,6 +160,8 @@
   }
 
   &__field {
+    position: relative;
+
     display: flex;
     align-items: baseline;
     justify-content: space-between;
@@ -170,7 +172,7 @@
     }
 
     @media (min-width: $tablet-width) {
-      margin-bottom: 18px;
+      margin-bottom: 19px;
     }
   }
 
@@ -188,14 +190,14 @@
     display: block;
     width: 100%;
     margin: 0;
-    margin-bottom: 34px;
+    margin-bottom: 33px;
 
     @media (min-width: $tablet-width) {
-      margin-bottom: 52px;
+      margin-bottom: 68px;
     }
 
     @media (min-width: $desktop-width) {
-      margin-bottom: 76px;
+      margin-bottom: 74px;
     }
 
     &::after {
@@ -257,6 +259,10 @@
   }
 
   &__fieldset--additions &__legend {
+    @media (min-width: $tablet-width) {
+      margin-bottom: 52px;
+    }
+
     @media (min-width: $desktop-width) {
       margin-bottom: 54px;
     }
@@ -289,13 +295,21 @@
       display: flex;
       align-items: center;
 
+      &:hover::before {
+        border: 1px solid #bababa;
+      }
+
+      &:active {
+        opacity: 0.3;
+      }
+
       &::before {
         display: block;
         width: 30px;
         height: 30px;
         margin-right: 16px;
 
-        border: 1px solid #ebebeb;
+        border: 1px solid #cdcdcd;
 
         content: "";
 
@@ -337,7 +351,7 @@
   }
 
   &__input-checkbox:checked + &__label--checkbox::after {
-    left: 5px;
+    left: 10px;
 
     width: 21px;
     height: 16px;
@@ -348,32 +362,36 @@
   }
 
   &__input {
-    &::placeholder {
-      font-size: 16px;
-      font-family: $title-fontstack;
-      text-transform: uppercase;
-
-      @media (min-width: $tablet-width) {
-        font-size: 20px;
-      }
-    }
     width: 100%;
-    padding-top: 15px;
+    padding-top: 12px;
     padding-bottom: 12px;
     padding-left: 15px;
 
+    font-size: 16px;
+    font-family: $title-fontstack;
+    text-transform: uppercase;
+
     border: 1px solid #ebebeb;
+
+    &:hover {
+      border: 1px solid #cdcdcd;
+    }
+
+    &:focus {
+      border: 1px solid #444444;
+      outline: none;
+    }
+
+    &:invalid {
+      border: 1px solid $error-color;
+    }
 
     @media (min-width: $tablet-width) {
       padding: 16px;
-      padding-top: 18px;
+      padding-top: 14px;
       padding-bottom: 14px;
-    }
 
-    @media (min-width: $desktop-width) {
-      margin-bottom: 5px;
-      padding-top: 16px;
-      padding-bottom: 14px;
+      font-size: 20px;
     }
   }
 
@@ -407,71 +425,52 @@
     }
   }
 
-  &__field--email {
-    margin-top: 19px;
+  &__input-icon {
+    position: absolute;
+
+    top: 19px;
+    right: 17px;
+
+    color: #222222;
+  }
+
+  &__input:focus + &__input-icon {
+    color: $accent-color;
+  }
+
+  &__input:invalid + &__input-icon {
+    color: $error-color;
+  }
+
+  &__field--phone {
+    margin-top: 20px;
 
     @media (min-width: $desktop-width) {
       margin-top: 0;
     }
-
-    &::after {
-      top: 16px;
-      right: 16px;
-
-      width: 17px;
-      height: 13px;
-
-      background-image: url("../../img/icon-mail.svg");
-
-      @media (min-width: $tablet-width) {
-        top: 20px;
-        right: 20px;
-      }
-    }
-  }
-
-  &__field--phone {
-    &::after {
-      top: 13px;
-      right: 14px;
-
-      width: 20px;
-      height: 20px;
-
-      background-image: url("../../img/icon-phone.svg");
-
-      @media (min-width: $tablet-width) {
-        top: 18px;
-        right: 17px;
-      }
-    }
   }
 
   &__textarea {
-    &::placeholder {
-      font-size: 16px;
-      font-family: $title-fontstack;
-      text-transform: uppercase;
-
-      @media (min-width: $tablet-width) {
-        font-size: 20px;
-      }
-    }
     width: 100%;
     min-height: 148px;
     padding-top: 14px;
     padding-bottom: 10px;
     padding-left: 14px;
 
-    border: 1px solid $gray-color;
+    font-size: 16px;
+    font-family: $title-fontstack;
+    text-transform: uppercase;
+
+    border: 1px solid $gray-color-dark;
 
     resize: none;
 
     @media (min-width: $tablet-width) {
-      min-height: 166px;
-      margin-top: 21px;
+      min-height: 172px;
       padding-top: 12px;
       padding-left: 18px;
+
+      font-size: 20px;
     }
 
     @media (min-width: $desktop-width) {
