--- a/source/sass/blocks/_social.scss
+++ b/source/sass/blocks/_social.scss
@@ -1,40 +1,56 @@
 .social {
   display: flex;
   justify-content: space-between;
+
   list-style: none;
 
   &__link {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 22px;
     height: 22px;
+
+    color: #666666;
+
     background-repeat: no-repeat;
     background-position: center;
+
+    &:hover {
+      color: $accent-color;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
 
     @media (min-width: $tablet-width) {
       width: 28px;
       height: 28px;
     }
+  }
+
+  &__icon {
+    color: inherit;
 
     &--vk {
-      background-image: url("../../img/icon-vk-mobile.svg");
-
       @media (min-width: $tablet-width) {
-        margin-right: 5px;
-        background-size: 30px 16px;
+        width: 30px;
+        height: 30px;
       }
     }
 
-    &--instagram {
-      background-image: url("../../img/icon-insta-mobile.svg");
-      background-size: 16px 16px;
-
+    &--insta {
       @media (min-width: $tablet-width) {
-        background-size: 23px 23px;
+        width: 23px;
+        height: 23px;
       }
     }
 
-    &--facebook {
-      background-image: url("../../img/icon-fb-mobile.svg");
+    &--fb {
+      @media (min-width: $desktop-width) {
+        width: 14px;
+      }
     }
   }
 }
