--- a/source/sass/blocks/_before-after.scss
+++ b/source/sass/blocks/_before-after.scss
@@ -130,6 +130,15 @@
       transform: translateY(-14px) translateX(-50%);
       filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.15));
 
+      &:hover {
+        filter: drop-shadow(0 3px 2px rgba(0, 0, 0, 0.25));
+      }
+
+      &:active {
+        border: 2px solid $accent-color;
+        filter: drop-shadow(0 4px 5px rgba(0, 0, 0, 0.3));
+      }
+
       &::before {
         width: 8px;
         height: 8px;
@@ -161,6 +170,14 @@
       font-size: 20px;
 
       border-bottom: 1px dotted #cdcdcd;
+
+      &:hover {
+        border-bottom: 1px solid #cdcdcd;
+      }
+
+      &:active {
+        border-bottom: none;
+      }
     }
   }
 }
