--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -15,13 +15,11 @@
     }
   }
 
-  &__address {
+  .page-index &__address {
     background-color: #ffffff;
+  }
 
-    .page-catalog & {
-      background-color: transparent;
-    }
-
+  &__address {
     @media (min-width: $tablet-width) {
       padding-top: 68px;
     }
@@ -105,6 +103,16 @@
     margin-top: 40px;
     margin-bottom: 28px;
 
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:active {
+      opacity: 0.6;
+    }
+
+    color: #111111;
+
     @media (min-width: $tablet-width) {
       margin: 0;
       margin-top: 12px;
@@ -138,7 +146,19 @@
     min-height: 80px;
     padding-bottom: 30px;
 
+    color: $body-text-color;
+    font-size: 16px;
     line-height: 16px;
+
+    text-decoration: none;
+
+    &:hover .page-footer__developers-logo-image {
+      color: $accent-color;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
 
     @media (min-width: $tablet-width) {
       width: 163px;
@@ -149,13 +169,6 @@
     @media (min-width: $desktop-width) {
       padding-top: 5px;
     }
-  }
-
-  &__developers-link {
-    color: $body-text-color;
-    font-size: 16px;
-    line-height: 16px;
-    text-decoration: none;
   }
 
   &__developers-logo {
