--- a/source/sass/blocks/_variables.scss
+++ b/source/sass/blocks/_variables.scss
@@ -1,7 +1,10 @@
 $title-color: #111111;
 $body-text-color: #444444;
 $accent-color: #68b739;
+$accent-color-dark: #5eaa2f;
+$error-color: #ff8282;
 $gray-color: #f2f2f2;
+$gray-color-dark: #ebebeb;
 
 $phone-width: 320px;
 $tablet-width: 768px;
