--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -99,7 +99,7 @@
     @media (min-width: $desktop-width) {
       z-index: 2;
 
-      width: 610px;
+      min-width: 610px;
       padding-left: 38px;
     }
   }
