--- a/source/sass/blocks/_button.scss
+++ b/source/sass/blocks/_button.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 40px;
-  padding: 0;
+  // min-height: 40px;
+  padding: 10px 0;
 
   color: #ffffff;
   font-size: 16px;
