--- a/source/sass/blocks/_catalog.scss
+++ b/source/sass/blocks/_catalog.scss
@@ -73,9 +73,11 @@
     text-align: center;
 
     @media (min-width: $tablet-width) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      // display: flex;
+      // flex-direction: column;
+      // align-items: center;
+      // box-sizing: border-box;
+      // max-width: 100%;
       padding: 38px;
       padding-top: 164px;
       padding-bottom: 40px;
@@ -97,7 +99,7 @@
     text-decoration: none;
 
     @media (min-width: $tablet-width) {
-      margin-bottom: 18px;
+      margin-bottom: 28px;
       padding: 0 35px;
 
       font-size: 20px;
@@ -144,7 +146,7 @@
     line-height: 16px;
 
     @media (min-width: $tablet-width) {
-      margin-bottom: auto;
+      margin-bottom: 85px;
       padding: 0 35px;
 
       font-size: 16px;
