--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -122,10 +122,11 @@
 
   &__social {
     display: flex;
-    align-items: center;
     width: 100%;
     min-height: 64px;
     padding: 0 75px;
+    // align-items: center;
+    padding-top: 20px;
 
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
@@ -134,6 +135,7 @@
       width: 128px;
       margin: 0;
       padding: 0;
+      padding-top: 20px;
 
       border: none;
     }
