--- a/source/sass/blocks/_variables.scss
+++ b/source/sass/blocks/_variables.scss
@@ -9,6 +9,7 @@ $gray-color-dark: #ebebeb;
 $phone-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1300px;
+$mobile-width-only: 767px;
 
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
