--- a/source/sass/blocks/_fonts.scss
+++ b/source/sass/blocks/_fonts.scss
@@ -1,16 +1,18 @@
 @font-face {
-  font-family: "Oswald";
   font-weight: normal;
+  font-family: "Oswald";
   font-style: normal;
 
   src: url("../../fonts/oswaldregular.woff2") format("woff2"),
     url("../../fonts/oswaldregular.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Oswald";
   font-weight: 600;
+  font-family: "Oswald";
   font-style: normal;
+  font-display: swap;
   src: url("../../fonts/oswaldmedium.woff2") format("woff2"),
     url("../../fonts/oswaldmedium.woff") format("woff");
 }
