--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -68,6 +68,9 @@
   }
 
   &__img {
+    width: 280px;
+    height: 273px;
+
     @media (min-width: $tablet-width) {
       position: absolute;
       bottom: 0;
@@ -134,7 +137,7 @@
     line-height: 18px;
 
     @media (min-width: $tablet-width) {
-      width: auto;
+      width: 245px;
       margin-top: 40px;
       margin-left: 88px;
       padding: 17px 26px;
